--- a/index.html
+++ b/index.html
@@ -6,41 +6,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+
 </head>
 
 <body>
-    <h1>Menu</h1>
-    <ul>
-        <li>Meat</li>
-        <li>Vega</li>
-        <li>Junk</li>
-    </ul>
-    <table>
-        <caption>My menu</caption>
-        <thead>
-            <tr>
-                <th>
-                    <h2>Meat</h2>
-                </th>
-                <th>
-                    <h2>Meat</h2>
-                </th>
-                <th>
-                    <h2>Meat</h2>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>pork</td>
-                <td>beef</td>
-                <td>chicken</td>
-            </tr>
 
-        </tbody>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <fieldset>
+        <legend>Legend</legend>
+        <h1>Menu</h1>
+        <ul>
+            <li>Meat</li>
+            <li>Vega</li>
+            <li>Junk</li>
+        </ul>
+        <table>
+            <caption>My menu</caption>
+            <thead>
+                <tr>
+                    <th>
+                        <h2>Meat</h2>
+                    </th>
+                    <th>
+                        <h2>Meat</h2>
+                    </th>
+                    <th>
+                        <h2>Meat</h2>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>pork</td>
+                    <td>beef</td>
+                    <td>chicken</td>
+                </tr>
+    </fieldset>
+    <p class="green-big">Green-Big
+        <span style="font-family: fantasy;">Greenspan</span>
+    </p>
+    <div>
+        <p id="blue-little">Blue-Little</p>
+        <p id="blue-little">Blue-Little</p>
+        <p id="blue-little">Blue-Little</p>
+        <p id="blue-little">Blue-Little</p>
+    </div>
+    <h1>Login</h1>
+    <div class="login-div">
+        <div class="form-group">
+            <label>Email</label>
+            <input class="form-control" type="email" name="email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input class="form-control" type="password" name="password  ">
+        </div>
+        <div class="form-group">
+            <button class="submit-btm">Login</button>
+        </div>
+    </div>
+
+    </tbody>
     </table>
+    <a href="https://github.com/IstvanM83/istvanm83.github.io" target="_blank" rel="noopener noreferrer">lINK</a>
 
 
+
+    <script src="/js/prices.js"></script>
 </body>
 
 </html>
