--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="istvan83.github.io/index.html">Home</a>
+            <a class="navbar-brand" href="http://www.istvan83.github.io/index.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Burgers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="istvan83.github.io/about.html">About</a>
+                        <a class="nav-link active" href="http://www.istvan83.github.io/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
